--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -79,16 +79,11 @@
 
 /**
  * Editor-specific alignment styles for DSG container blocks
- * Ensures blocks display correctly in the editor with proper full-width behavior
- * CRITICAL: High specificity required to override WordPress editor styles
- * Target blocks using custom dsgo-align-* classes
+ * Use the same approach as WordPress core - negative margins to break out of global padding
  */
-.block-editor-block-list__block.has-global-padding[data-type="designsetgo/grid"],
-.block-editor-block-list__block.has-global-padding[data-type="designsetgo/row"],
-.block-editor-block-list__block.has-global-padding[data-type="designsetgo/section"] {
-	// Full-width blocks should break out of editor padding
-	&.dsgo-align-full {
-		margin-right: calc(var(--wp--style--root--padding-right) * -1) !important;
-		margin-left: calc(var(--wp--style--root--padding-left) * -1) !important;
-	}
+.block-editor-block-list__block[data-type="designsetgo/grid"].dsgo-align-full.has-global-padding,
+.block-editor-block-list__block[data-type="designsetgo/row"].dsgo-align-full.has-global-padding,
+.block-editor-block-list__block[data-type="designsetgo/section"].dsgo-align-full.has-global-padding {
+	margin-right: calc(var(--wp--style--root--padding-right) * -1) !important;
+	margin-left: calc(var(--wp--style--root--padding-left) * -1) !important;
 }
